[YMCA-1493] move specific spring campaign date to separate controller

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
@@ -39,7 +39,7 @@
         </div>
 
         <div class="compain-progress--grid"
-             data-ng-repeat="date in myProgressC.storage.campaign.dates">
+             data-ng-repeat="date in myProgressC.storage.spring2017campaign.dates">
             <div class="compain-progress--col">
                 <div class="compain-progress-block"
                      data-ng-class="myProgressC.checkInBonusImageClass(date)"
