--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-intro.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-winners-intro.html.twig
@@ -14,8 +14,8 @@
   <div class="compain-content-win">
     <div class="content">
       <h2>{{ 'to be announced!'|t }}</h2>
-      <p>{{ 'The drawing will take place at the end of the challenge.'|t }}<br>
-        {{ description }}
+      <p>{{ 'The drawing will take place at the end of the challenge.'|t }}<br><br>
+        <b>{{ description }}</b>
       </p>
       <h3>{{ 'good luck!'|t }}</h3>
     </div>
