--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * @file
- * Display Instant Win game and history.
+ * Display Todays Insight tab.
  */
 #}
 <div class="inner-container ng-hide login-required"
