[YMCA-1525] Linking to tabs - initial implementation.

--- a/docroot/modules/custom/ymca_retention/templates/layouts/ymca-retention.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/layouts/ymca-retention.html.twig
@@ -13,23 +13,23 @@
 
   {{ content.main }}
   <div class="tab-content">
-    <div class="tab-pane fade in active" id="tab_1">
+    <div id="tab_1" class="tab-pane fade" data-ng-class="retentionC.tabClass('tab_1')">
       {{ content.tab_1 }}
     </div>
 
-    <div class="tab-pane fade" id="tab_2">
+    <div id="tab_2" class="tab-pane fade" data-ng-class="retentionC.tabClass('tab_2')">
       {{ content.tab_2 }}
     </div>
 
-    <div class="tab-pane fade" id="tab_3">
+    <div id="tab_3" class="tab-pane fade" data-ng-class="retentionC.tabClass('tab_3')">
       {{ content.tab_3 }}
     </div>
 
-    <div class="tab-pane fade" id="tab_4">
+    <div id="tab_4" class="tab-pane fade" data-ng-class="retentionC.tabClass('tab_4')">
       {{ content.tab_4 }}
     </div>
 
-    <div class="tab-pane fade" id="tab_5">
+    <div id="tab_5" class="tab-pane fade" data-ng-class="retentionC.tabClass('tab_5')">
       <div class="inner-container">
         <div class="content-wrapper content-wrapper--detailed clearfix">
           {{ content.tab_5 }}
