[YMCA-1493] use data-ng-style

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
@@ -43,7 +43,7 @@
             <div class="compain-progress--col">
                 <div class="compain-progress-block"
                      data-ng-class="myProgressC.checkInBonusImageClass(date)"
-                     ng-style="myProgressC.bonusImage(date)">
+                     data-ng-style="myProgressC.bonusImage(date)">
                     <div class="compain-progress-block--header">
                         <div class="content">
                             <div class="day">
