[YGH-396] add styles

--- a/prototypes/scss/screen.scss
+++ b/prototypes/scss/screen.scss
@@ -26,6 +26,7 @@
 
 @import "./blocks/block-description";
 @import "./blocks/paragraph-header";
+@import "./blocks/openy-content-pager";
 
 @import "./paragraphs/featured_stories";
 @import "./paragraphs/columns";
