[YGH-216] Update style for See more stories button

--- a/blog.scss
+++ b/blog.scss
@@ -10,6 +10,12 @@
     padding: 20px 0 30px;
   }
 
+  .btn {
+    margin: 30px auto 30px;
+    max-width: 360px;
+    display: block;
+  }
+
   form {
     background-color: $lighter-grey;
     padding: 20px;
