--- a/modules/blog.scss
+++ b/modules/blog.scss
@@ -12,7 +12,8 @@
 
   .btn {
     margin: 30px auto 30px;
-    max-width: 360px;
+    min-width: 280px;
+    width: 30%;
     display: block;
   }
 
