--- a/modules/blog.scss
+++ b/modules/blog.scss
@@ -10,7 +10,7 @@
     padding: 20px 0 30px;
   }
 
-  .btn {
+  .pager__item .btn {
     margin: 30px auto 30px;
     min-width: 280px;
     width: 30%;
