--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
@@ -9,13 +9,53 @@
      data-ng-show="retentionC.storage.member">
   <div class="content-wrapper content-wrapper--small clearfix">
     <div class="content-item">
-      <div data-ng-bind-html="getArticle()"> </div>
+      <div class="content-video-wrapper">
+        <div class="content-video-item">
+          <div class="content-video">
+            <img alt="video"
+                 data-ng-show="!todayInC.isVideoPresent()"
+                 data-ng-src="{{ '{{ todayInC.getImage() }}' }}"/>
+            <ng-bind-html
+                    data-ng-bind-html="todayInC.getVideo()">
+            </ng-bind-html>
+          </div>
+          <div class="content-video--label">
+            <div class="info">
+              <span class="label">TIP #{{ '{{ todayInC.getTip() }}' }}</span>
+              <span class="data">{{ '{{ todayInC.getDate() }}' }}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <a href="javascript:void(0);"
+         data-ng-click="todayInC.previous()"
+         data-ng-show="todayInC.isPrevious()">Previous</a>
+      <a href="javascript:void(0);"
+         data-ng-click="todayInC.next()"
+         data-ng-show="todayInC.isNext()">Next</a>
+
+      <h3>{{ '{{ todayInC.getTitle() }}' }}</h3>
+      <ng-bind-html
+              data-ng-bind-html="todayInC.getContent()">
+      </ng-bind-html>
     </div>
 
     <div class="content-item">
       <a class="btn btn-lg btn-primary compain-green" data-toggle="modal" data-target="#bonus-modal" href="#"
          data-ng-click="todayInC.addBonus()"
-         data-ng-show="!todayInC.isBonus()">click to redeem bonus</a>
+         data-ng-show="todayInC.isBonusButtonVisible()">click to redeem bonus</a>
+    </div>
+
+    <div class="compain-alert-bonus"
+         data-ng-show="todayInC.isBonusTimerVisible()">
+      <a href class="btn btn-timer">Bonus unlocked in <span class="timer">{{ '{{ todayInC.storage.todays_insight_timer }}' }}</span></a>
+    </div>
+
+    <div class="compain-alert-bonus compain-alert-bonus--active"
+         data-ng-show="todayInC.isBonusButtonVisible()">
+      <a href="#" class="btn btn-bonus"
+         data-ng-click="todayInC.addBonus()">Click here to redeem you bonus</a>
     </div>
   </div>
 </div>
