--- a/docroot/themes/custom/ymca/sass/ysr_2017/_tabs.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_tabs.scss
@@ -19,11 +19,7 @@
       @include rem(margin, 0 60px 0 0);
     }
 
-    @include breakpoint($desktop-small) {
-      @include rem(margin, 0 60px 0 0);
-    }
-
-    @include breakpoint($desktop) {
+    @include breakpoint($desktop+60) {
       @include rem(margin, 0 80px 0 0);
     }
 
