--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-tabs-selector.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-tabs-selector.html.twig
@@ -51,16 +51,8 @@
       </a>
     </li>
 
-    <li class="ng-hide"
-        data-ng-show="retentionC.storage.campaign.started"
-        data-ng-class="retentionC.tabSelectorClass('tab_4')">
+    <li data-ng-class="retentionC.tabSelectorClass('tab_4')">
       <a href="#tab_4" data-toggle="tab" data-ng-click="retentionC.tabSelectorClick('tab_4')">
-        {{ 'Winners'|t }}
-      </a>
-    </li>
-    <li class="ng-hide"
-        data-ng-show="!retentionC.storage.campaign.started">
-      <a href="#tab_4" class="campaign-not-started" data-toggle="modal" data-target="#bonus-modal-day" data-type="tabs-lock">
         {{ 'Winners'|t }}
       </a>
     </li>
