[YMCA-1539] Fix the protection of “goals and progress” tab.

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
@@ -4,8 +4,9 @@
  * Display member "My progress" report.
  */
 #}
-<div class="inner-container"
-     data-ng-controller="MyProgressController as myProgressC">
+<div class="inner-container ng-hide login-required"
+     data-ng-controller="MyProgressController as myProgressC"
+     data-ng-show="retentionC.storage.member">
     <div class="compain-tab-header compain-tab-header--progress clearfix">
         <div class="compain-progress"
              data-ng-class="myProgressC.visitsCountClass()">
