--- a/docroot/modules/custom/ymca_retention/templates/forms/ymca-retention-register-form-modal.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/forms/ymca-retention-register-form-modal.html.twig
@@ -24,7 +24,7 @@
       {{ form.submit_ok }}
     </div>
     <div class="compain-link-collapsed">
-      <a href="#" class="compain-facility-access-hint-link collapsed" data-toggle="collapse" data-target=".compain-facility-access-hint-wrapper">
+      <a href="javascript:void(0)" class="compain-facility-access-hint-link collapsed" data-toggle="collapse" data-target=".compain-facility-access-hint-wrapper">
         {{ 'Where can I find my Member ID?'|t }}
       </a>
     </div>
