--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
@@ -42,7 +42,7 @@
     </div>
 
     <div class="content-item">
-      <a class="btn btn-lg btn-primary compain-green" data-toggle="modal" data-target="#bonus-modal" href="#"
+      <a class="btn btn-lg btn-primary compain-green" data-toggle="modal" data-target="#bonus-modal" href="javascript:void(0)"
          data-ng-click="todayInC.addBonus()"
          data-ng-show="todayInC.isBonusButtonVisible()">click to redeem bonus</a>
     </div>
@@ -54,8 +54,8 @@
 
     <div class="compain-alert-bonus compain-alert-bonus--active"
          data-ng-show="todayInC.isBonusButtonVisible()">
-      <a href="#" class="btn btn-bonus"
-         data-ng-click="todayInC.addBonus()">Click here to redeem you bonus</a>
+      <a href="javascript:void(0)" class="btn btn-bonus"
+         data-ng-click="todayInC.addBonus()">Click here to redeem your bonus</a>
     </div>
   </div>
 </div>
