Video responsive wrapper

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
@@ -15,9 +15,11 @@
             <img alt="video"
                  data-ng-show="!todayInC.isVideoPresent()"
                  data-ng-src="{{ '{{ todayInC.getImage() }}' }}"/>
-            <ng-bind-html
-                    data-ng-bind-html="todayInC.getVideo()">
-            </ng-bind-html>
+            <div class="videoWrapper">
+              <ng-bind-html
+                      data-ng-bind-html="todayInC.getVideo()">
+              </ng-bind-html>
+            </div>
           </div>
           <div class="content-video--label">
             <div class="info">
