--- a/docroot/themes/custom/ymca/css/ysr_2017.css
+++ b/docroot/themes/custom/ymca/css/ysr_2017.css
@@ -202,6 +202,21 @@ html, body {
   margin-top: 20px;
 }
 
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* 16:9 */
+  padding-top: 25px;
+  height: 0;
+}
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 .compain-header {
   height: 226px;
   height: 22.6rem;
