[YMCA-1497] don't show video wrapper if it is not present

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
@@ -15,7 +15,8 @@
             <img alt="video"
                  data-ng-show="!todayInC.isVideoPresent()"
                  data-ng-src="{{ '{{ todayInC.getImage() }}' }}"/>
-            <div class="videoWrapper">
+            <div class="videoWrapper"
+                 data-ng-show="todayInC.isVideoPresent()">
               <ng-bind-html
                       data-ng-bind-html="todayInC.getVideo()">
               </ng-bind-html>
