[YGH-84] Theme Branch CT

--- a/base/colors.scss
+++ b/base/colors.scss
@@ -10,6 +10,7 @@ $darker-grey: #333333;
 
 
 $sky-blue: #bfe1f3;
+$lighter-blue: #00beea;
 $light-blue: #00aeef;
 $blue: #0089d0;
 $dark-blue: #0060af;
