--- a/docroot/modules/custom/ymca_retention/templates/layouts/ymca-retention.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/layouts/ymca-retention.html.twig
@@ -4,9 +4,7 @@
  * Template for YMCA Retention layout.
  */
 #}
-<div class="retention-campaign{% if settings.extra_classes is not empty %} {{ settings.extra_classes }}{% endif %}"
-     data-ng-app="Retention"
-     data-ng-controller="RetentionController as retentionC">
+<div class="retention-campaign{% if settings.extra_classes is not empty %} {{ settings.extra_classes }}{% endif %}">
   <header class="compain-header">
     {{ content.header }}
   </header>
