[YMCA-1545] show +1 bonus pop up when user receiving bonus

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-todays-insight.html.twig
@@ -60,7 +60,7 @@
 
     <div class="compain-alert-bonus compain-alert-bonus--active"
          data-ng-show="todayInC.isBonusButtonVisible()">
-      <a href="javascript:void(0)" class="btn btn-bonus"
+      <a href="javascript:void(0)" class="btn btn-bonus" data-toggle="modal" data-target="#bonus-modal"
          data-ng-click="todayInC.addBonus()">Click here to redeem your bonus</a>
     </div>
   </div>
