[YMCA-1548] add generation visits for everyday of campaign for fake members; change message if goal is achieved; leave full progress bar if goal is achieved

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
@@ -21,8 +21,13 @@
         </div>
 
         <div class="compain-progress--description">
-            <div class="description-item">
+            <div class="description-item"
+                 data-ng-show="!myProgressC.isGoalAchieved()">
                 <p>You need <b>{{ '{{ myProgressC.visitsLeft() }}' }} more visits</b> <br/> to achive your goal.</p>
+            </div>
+            <div class="description-item"
+                 data-ng-show="myProgressC.isGoalAchieved()">
+                <p>You have achieved your goal!</p>
             </div>
         </div>
         <div class="compain-progress--label ">
