[YMCA-1548] upd message - Goal achieved!

--- a/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
+++ b/docroot/modules/custom/ymca_retention/templates/blocks/ymca-retention-my-progress.html.twig
@@ -27,7 +27,7 @@
             </div>
             <div class="description-item"
                  data-ng-show="myProgressC.isGoalAchieved()">
-                <p>You have achieved your goal!</p>
+                <p>Goal achieved!</p>
             </div>
         </div>
         <div class="compain-progress--label ">
