--- a/docroot/themes/custom/ymca/sass/ysr_2017/_tabs-content.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_tabs-content.scss
@@ -117,6 +117,7 @@
       vertical-align: top;
       color: $green-dark;
       position: relative;
+      cursor: default;
 
       &:before {
         content: '';
